openshift/operator/roles/rightlyrics/files/lyrics-service/deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: rl-lyrics-service
  name: rl-lyrics-service
  namespace: right-lyrics
spec:
  replicas: 1
  selector:
    app: rl-lyrics-service
    deploymentconfig: rl-lyrics-service
  strategy:
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: rl-lyrics-service
        deploymentconfig: rl-lyrics-service
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: rl-lyrics-mongodb
        - name: DB_NAME
          value: rl-lyrics-mongodb
        - name: DB_PASSWORD
          value: right-lyrics
        - name: DB_USERNAME
          value: right-lyrics
        image: 'quay.io/right-lyrics/operator:1.0.0'
        name: rl-lyrics-service
        ports:
        - containerPort: 8080
          protocol: TCP
  triggers:
  - type: ConfigChange
