openshift/operator/roles/rightlyrics/files/lyrics-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rl-lyrics-service
  name: rl-lyrics-service
  namespace: right-lyrics
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: rl-lyrics-service
    deploymentconfig: rl-lyrics-service
  type: ClusterIP
