openshift/operator/roles/rightlyrics/files/lyrics-service/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: rl-lyrics-service
  name: rl-lyrics-service
  namespace: right-lyrics
spec:
  host: rl-lyrics-service-right-lyrics.apps.crc.testing
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: rl-lyrics-service
